--- a/views/partials/index.html
+++ b/views/partials/index.html
@@ -1,7 +1,28 @@
 <div class="container">
     <div class="row">
         <div class="span12">
-            Yo this is the index
+            Yo this is the index does it really work
+            {{posts.title}}
         </div>
     </div>
+    </br>
+    <div class="row">
+        Select your locale:
+    <select name="repeatSelect" id="repeatSelect" ng-model="localeid" >
+        <option ng-repeat="locale in hiwdata" value="{{locale.id}}">{{locale.fullName}}</option>
+    </select>
+        {{localeid}}
+    </div>
+    <div class="row">
+        Select your Gender:
+        <select name="repeatSelect" id="repeatSelector" ng-model="mygenderid" >
+            <option ng-repeat="option in gender" value="{{option.id}}">{{option.name}}</option>
+        </select>
+        {{mygenderid}}
+
+    </div>
+    <button ng-click="getindicators()" >Get My Indicators</button>
+</div>
+
+
 </div>
