--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </a>
-            <a class="brand" href="#">Express Angular</a>
+            <a class="brand" href="#">Now watch me whip!</a>
             <div class="nav-collapse">
                 <ul class="nav">
                     <li class="active"><a href="#">Home</a></li>
