--- a/views/partials/index.html
+++ b/views/partials/index.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="span12">
-            Yo this is the index does it really work
+            Yo this is the index does it really work??
             {{posts.title}}
         </div>
     </div>
@@ -21,8 +21,5 @@
         {{mygenderid}}
 
     </div>
-    <button ng-click="getindicators()" >Get My Indicators</button>
-</div>
-
-
+<!--//    <button ng-click="getindicators()" >Get My Indicators</button>-->
 </div>
